--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Rubik', sans-serif;
+  color: #4B5057;
 }
 
 @font-face {
@@ -16,6 +17,10 @@ body {
   src: local("DIN-Regular"), url("../fonts/DINM___.ttf") format("ttf");
 }
 
+a {
+  text-decoration: none;
+}
+
 p {
   color: #4B5057;
 }
@@ -29,13 +34,17 @@ h1 {
   padding: 0;
 }
 
+nav {
+  display: inline-block;
+}
+
 .contenedor-full {
   width: 100%;
 }
 
 .contenedor {
   max-width: 1200px;
-  width: 70%;
+  width: 75%;
   background-color: rgba(0, 0, 0, 0.1);
   margin-left: auto;
   margin-right: auto;
@@ -45,27 +54,86 @@ h1 {
   background-color: #000000;
 }
 
-.header-wrap .set-logo {
-  border: 1px solid white;
+.header-wrap .header-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.header-wrap .header-set .set-logo {
   display: inline-block;
   width: 40%;
 }
 
-.header-wrap .set-logo img {
-  display: inline-block;
+.header-wrap .header-set .set-logo img {
+  display: block;
+  max-height: 70px;
+  width: auto;
+}
+
+.header-wrap .navs-wrap {
+  width: 60%;
 }
 
 .header-wrap ul {
-  display: inline-block;
-  border: 1px solid white;
-  overflow: hidden;
-  list-style: none;
-  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .header-wrap ul li {
-  float: left;
+  -webkit-box-flex: 1;
+  -ms-flex: auto;
+  flex: auto;
+  list-style: none;
+  text-align: center;
+}
+
+.header-wrap ul li a {
+  display: block;
   color: #ffffff;
-  padding: inherit;
-  max-width: 167px;
+  width: 100%;
+  line-height: 4.7;
+  position: relative;
+}
+
+.header-wrap ul li a:after {
+  content: '';
+  position: absolute;
+  bottom: -6px;
+  left: 0px;
+  width: 100%;
+  height: 5px;
+  background-color: #80D3AE;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+  transition: opacity 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+  -o-transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+  transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+  transition: opacity 0.3s ease 0s, transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
+  -webkit-transform: translateY(5px);
+  -ms-transform: translateY(5px);
+  transform: translateY(5px);
+}
+
+.header-wrap ul li a:hover:after {
+  opacity: 1;
+  -webkit-transform: translateY(-6px);
+  -ms-transform: translateY(-6px);
+  transform: translateY(-6px);
+}
+
+.banner-wrap {
+  background: url("../images/banner.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  max-width: 1920px;
+  height: 100%;
 }
