--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,5 +1,6 @@
 body {
   font-family: 'Rubik', sans-serif;
+  color: $color-text;
 }
 
 @font-face {
@@ -14,6 +15,10 @@ body {
   font-style: normal;
   font-weight: normal;
   src: local('DIN-Regular'), url('../fonts/DINM___.ttf') format('ttf');
+}
+
+a {
+  text-decoration: none;
 }
 
 p {
