--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,3 +2,21 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@mixin line-nav {
+  content: '';
+  position: absolute;
+  bottom: -6px;
+  left: 0px;
+  width: 100%;
+  height: 5px;
+  background-color: $color-second;
+  opacity: 0;
+  transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+  transform: translateY(5px);
+}
+
+@mixin line-hover {
+  opacity:1;
+  transform: translateY(-6px)
+}
