--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -32,6 +32,8 @@ h1 {
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 nav {
@@ -135,5 +137,21 @@ nav {
   background-repeat: no-repeat;
   background-position: center center;
   max-width: 1920px;
+  height: calc(100vh - 150px);
+}
+
+.banner-wrap .banner-set {
+  border: 1px solid red;
   height: 100%;
+}
+
+.banner-wrap .banner-set .banner-content {
+  border: 1px solid white;
+  width: 50%;
+  position: relative;
+  top: 50%;
+  left: 100%;
+  -webkit-transform: translate(-100%, -50%);
+  -ms-transform: translate(-100%, -50%);
+  transform: translate(-100%, -50%);
 }
