--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -4,5 +4,22 @@
   background-repeat: no-repeat;
   background-position: center center;
   max-width: 1920px;
-  height: 100%;
-}
+  height: calc(100vh - 150px);
+
+
+    .banner-set {
+      border: 1px solid red;
+      height: 100%;
+
+      .banner-content {
+        border: 1px solid white;
+        width: 50%;
+        position: relative;
+        top: 50%;
+        left: 100%;
+        transform: translate(-100%, -50%);
+      }
+    }
+
+
+  }
