--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -20,3 +20,9 @@
   opacity:1;
   transform: translateY(-6px)
 }
+
+@mixin subtitles {
+  font-size: $size-subtitle;
+  color: $color-base;
+  font-weight: 500;
+}
