--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   display: inline-block;
 }
@@ -19,6 +24,7 @@ nav {
 @if $enable-contenedor {
   .contenedor {
     max-width: 1200px;
+    padding: 0 15px;
     width: 75%;
     background-color: rgba(0, 0, 0, .1);
     @include center-horizontal;
