--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -26,3 +26,9 @@
   color: $color-base;
   font-weight: 500;
 }
+
+@mixin titles {
+  font-size: $size-title;
+  color: $color-title;
+  font-weight: 500;
+}
