--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -25,6 +25,7 @@
   font-size: $size-subtitle;
   color: $color-base;
   font-weight: 500;
+  margin-bottom: $bottom-subtitle;
 }
 
 @mixin titles {
