--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,8 +18,10 @@ $size-text: 15px;
 $size-strong: 17px;
 $size-text-small: 14px;
 
+// padding
+$padding-contenedor: 45px;
 
-
-// textos
+// margin
+$bottom-subtitle: 20px;
 
 
