--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -24,6 +24,7 @@ a {
 
 p {
   color: #4B5057;
+  line-height: 1.5em;
 }
 
 h1 {
@@ -34,6 +35,7 @@ h2 {
   font-size: 22px;
   color: #163D4B;
   font-weight: 500;
+  margin-bottom: 20px;
 }
 
 * {
@@ -60,7 +62,6 @@ nav {
   max-width: 1200px;
   padding: 0 15px;
   width: 75%;
-  background-color: rgba(0, 0, 0, 0.1);
   margin-left: auto;
   margin-right: auto;
 }
@@ -191,7 +192,7 @@ nav {
 }
 
 .metodologia-wrap {
-  padding-top: 40px;
+  padding-top: 45px;
 }
 
 .metodologia-wrap .metodologia-content {
@@ -202,6 +203,15 @@ nav {
   padding-right: 10%;
 }
 
+.metodologia-wrap .metodologia-content p {
+  margin-bottom: 24px;
+}
+
+.metodologia-wrap .metodologia-content ul {
+  padding-left: 15px;
+  line-height: 1.5em;
+}
+
 .metodologia-wrap figure {
   display: inline-block;
   width: 50%;
@@ -209,7 +219,17 @@ nav {
 
 .metodologia-wrap figure .img-laptop {
   display: block;
-  width: 100%;
+  width: 120%;
   max-width: 725px;
   height: auto;
+}
+
+.consultores-wrap {
+  clear: both;
+  padding-top: 55px;
+}
+
+.consultores-wrap .consultores-content {
+  text-align: center;
+  width: 100%;
 }
