--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -26,7 +26,7 @@ nav {
     max-width: 1200px;
     padding: 0 15px;
     width: 75%;
-    background-color: rgba(0, 0, 0, .1);
+    //background-color: rgba(0, 0, 0, .1);
     @include center-horizontal;
   }
 }
