--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -48,22 +48,23 @@
       }
     }
   }
-  .mobileMenu {
-    position: fixed;
-  }
-}
 
-.slicknav_menu {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-  .header-wrap {
-    display: none;
+  @media screen and (max-width: 1200px) {
+      .header-set {
+        width: 100%;
+      }
   }
 
-  .slicknav_menu {
-    display: block;
+  @media screen and (max-width: 768px) {
+      display: none;
   }
+
 }
+
+
+
+
+
+
+
 
