--- a/scss/_contenido.scss
+++ b/scss/_contenido.scss
@@ -11,6 +11,7 @@
 
     p {
       margin-bottom: 24px;
+      text-align: justify;
     }
 
     ul {
@@ -30,25 +31,61 @@
       height: auto;
     }
   }
+
+  @media screen and (max-width: 1024px) {
+    border-bottom: 1px solid #80D3AE;
+    .metodologia-content {
+      width: 100%;
+      float: none;
+
+      h2 {
+        text-align: center;
+      }
+
+      p {
+        text-align: center;
+      }
+
+      ul {
+        margin-top: 30px;
+      }
+    }
+
+    figure {
+      display: inline-block;
+      width: 100%;
+
+      .img-laptop {
+        width: 500px;
+        padding-top: $padding-contenedor;
+        @include center-horizontal;
+      }
+    }
+  }
 }
 
 .consultores-wrap {
   clear: both;
   padding-top: 55px;
+  padding-bottom: 70px;
 
   .consultores-content {
     text-align: center;
     width: 100%;
-    //@include center-horizontal;
+
+    h2 {
+      margin-bottom: 16px;
+    }
   }
 
   .carrusel {
     padding-top: $padding-contenedor;
 
     .set-ejecutivo {
-      padding: 0 40px;
-      //margin-left: 15px;
-      //margin-right: 15px;
+      //padding: 0 40px;
+      border: 1px solid #dddddd;
+      margin-left: 40px;
+      margin-right: 40px;
 
       img {
         width: 100%;
@@ -72,10 +109,12 @@
   }
 
   @media screen and (max-width: 1024px) {
-    .metodologia-content {
-      width: 100%;
-      float: none;
-      background-color: red;
+    .carrusel {
+      .set-ejecutivo {
+        margin-left: 30px;
+        margin-right: 30px;
+      }
     }
   }
+
 }
